# 7dof_ws

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
src/arm_bot/: CMakeLists.txt  package.xml
src/arm_bot/arm_bot/: cartesian_path.py  compare_runs.py  drawing_batch_planner.py  drawing_executor_node.py  drawing_trajectory_planner.py  drawing_ui_node.py  fk_arm_v3.py  gz_path_tracer.py  ik_arm_v3.py  ik_lib.py  ik_to_trajectory.py  ik_verifier.py  moveit_client.py  relay_node.py  send_test_goal.py  slider_controller.py  workspace_prober.py
src/arm_bot/launch/: arm_slider.launch.py  bot_controller.launch.py  draw_and_execute.launch.py  draw_and_execute_batch.launch.py  draw_and_execute_moveit.launch.py  fk_rviz_test.launch.py  gazebo.launch.py  ik_gazebo.launch.py  ik_rvize_test.launch.py  pendant_backend.launch.py  rviz.launch.py  rviz_joint_gui.launch.py  verify_tracking.launch.py
src/arm_bot/meshes/: Link_7.STL  ee.STL
src/arm_bot/rviz/: view.rviz
src/arm_bot/src/: move_program.cpp
src/arm_bot/urdf/: arm.xacro  arm_bot.csv  arm_bot.urdf.xacro  gazebo.xacro  ros2control.xacro
src/arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_moveit_config/config/: arm_bot.ros2_control.xacro  arm_bot.srdf  arm_bot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/arm_moveit_config/include/: demo_trigger.hpp
src/arm_moveit_config/launch/: demo.launch.py  demo_bot.launch.py  draw.launch.py  gazebo_sim.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  stack.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_moveit_config/src/: cartesian_move.cpp  circle_trajectory.cpp  move.cpp  square_trajectory.cpp  text_trajectory.cpp  tf_broadcast.cpp
teach_pendant/: .gitignore  README.md  install.sh  pyproject.toml
teach_pendant/pendant7dof/: __init__.py  bootstrap.py  cli.py  launcher.py  ros_bridge.py  store.py
teach_pendant/pendant7dof/gui/: __init__.py  app.py  drawing_canvas.py  joystick.py  main_window.py
